tests/typechecker/should_fail/fields_2.csp
channel a : Int.Int.Int
channel b : Int.Int
channel c : Int

Q = c?x?y -> STOP
